--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color:  linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
+    
+    background-image: linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
+    
 }
 
 h1 {
