--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-    color: black;
+    color: rgb(0, 0, 0);
     font-size: 50px;
     text-align: center;
     text-transform: uppercase;
