--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+* {
+    margin: 0;
+}
+
 body {
     
     background-image: linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
-    
+ 
+}
+
+#banner {
+    width: 100%;
 }
 
 h1 {
