--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     background-image: linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
  
 }
+ nav li {
+    display: inline;
+    
+ }
+
 
 #banner {
     width: 100%;
